criando a tag div para o fundo das cores

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title></title>
 </head>
 <body>
-   <main></main>
+   <main>
+     <div id="cardColor"></div>
+   </main>
   <script src="assets/js/script.js"></script>
  </body>
 </html>
