--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
    <main>
      <div id="cardColor"></div>
+      <select id="selection-colors" onchange="bgChange(this.value)"></select>
    </main>
   <script src="assets/js/script.js"></script>
  </body>
