Criando o option selected

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
    <main>
      <div id="cardColor"></div>
-      <select id="selection-colors" onchange="bgChange(this.value)"></select>
+      <select id="selection-colors" onchange="bgChange(this.value)">
+     <option selected>Colors</option>
+      </select>
    </main>
   <script src="assets/js/script.js"></script>
  </body>
