Criando uma option de vermelho

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <div id="cardColor"></div>
       <select id="selection-colors" onchange="bgChange(this.value)">
      <option selected>Colors</option>
+     <option value="#BF2011">Red</option>
       </select>
    </main>
   <script src="assets/js/script.js"></script>
