Criando uma option de laranja

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <select id="selection-colors" onchange="bgChange(this.value)">
      <option selected>Colors</option>
      <option value="#BF2011">Red</option>
+     <option value="#FA7F08">Orange</option>
       </select>
    </main>
   <script src="assets/js/script.js"></script>
