--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
      <option selected>Colors</option>
      <option value="#BF2011">Red</option>
      <option value="#FA7F08">Orange</option>
+     <option value="#103778">Blue</option>
       </select>
    </main>
   <script src="assets/js/script.js"></script>
