Criando uma option de roxo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
      <option value="#BF2011">Red</option>
      <option value="#FA7F08">Orange</option>
      <option value="#103778">Blue</option>
+     <option value="#970FF2">Purple</option>
       </select>
    </main>
   <script src="assets/js/script.js"></script>
