Projeto finalizado :checkered_flag:

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/icon" href="assets/icon/colors.png">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title></title>
+  <title>Gerador de cores</title>
 </head>
 <body>
    <main>
